// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuAction renders component 1`] = `
<ClickAwayListener
  mouseEvent="onMouseUp"
  onClickAway={[Function]}
  touchEvent="onTouchEnd"
>
  <WithStyles(IconButton)
    buttonRef={[Function]}
    className="button-mock"
    disableRipple={true}
    disabled={false}
    onClick={[Function]}
  >
    <Icon
      className="icon-mock"
      fontSize="inherit"
    />
  </WithStyles(IconButton)>
  <Memo(WithStyles(PopupMenu))
    anchorEl={
      Object {
        "current": null,
      }
    }
    open={false}
  >
    <MenuList
      className="menuList-mock"
      disableListWrap={false}
    >
      <Memo(WithStyles(MenuActionItem))
        onClick={[MockFunction]}
        title="test"
      />
      <Memo(WithStyles(MenuActionItem))
        onClick={[MockFunction]}
        title="test 2"
      />
    </MenuList>
  </Memo(WithStyles(PopupMenu))>
</ClickAwayListener>
`;

exports[`MenuAction renders with optional props 1`] = `
<ClickAwayListener
  mouseEvent="onMouseUp"
  onClickAway={[Function]}
  touchEvent="onTouchEnd"
>
  <IconButton
    buttonRef={[Function]}
    className="button-mock"
    disableRipple={true}
    disabled={false}
    onClick={[Function]}
  >
    <Icon
      className="icon-mock"
      fontSize="inherit"
    />
  </IconButton>
  <Memo(WithStyles(PopupMenu))
    anchorEl={
      Object {
        "current": null,
      }
    }
    offset="0 20"
    open={false}
  >
    <MenuList
      className="menuList-mock"
      disableListWrap={false}
    >
      <Memo(WithStyles(MenuActionItem))
        onClick={[MockFunction]}
        title="test"
      />
      <Memo(WithStyles(MenuActionItem))
        onClick={[MockFunction]}
        title="test 2"
      />
    </MenuList>
  </Memo(WithStyles(PopupMenu))>
</ClickAwayListener>
`;
